# ld-decode

./: .gitmodules  CMakeLists.txt
tools/: .gitignore
tools/ld-efm-decoder/: CMakeLists.txt  decoders.cpp  decoders.h  delay_lines.cpp  delay_lines.h  efm_processor.cpp  efm_processor.h  efmdecoder.cpp  efmdecoder.h  ezpwd  frame.cpp  frame.h  ld-efm-decoder  main.cpp  reedsolomon.cpp  reedsolomon.h
tools/ld-efm-encoder/: .gitignore  CMakeLists.txt  audio.cpp  audio.h  converter.cpp  converter.h  data24.cpp  data24.h  delay_lines.cpp  delay_lines.h  efm_processor.cpp  efm_processor.h  efmencoder.cpp  efmencoder.h  encoders.cpp  encoders.h  frame.cpp  frame.h  ld-efm-encoder  library  main.cpp  output.efm  reedsolomon.cpp  reedsolomon.h  subcode.cpp  subcode.h
